[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-wellbeing"
version = "0.1.0"
description = "PAIV-oriented fidelity metrics for LLM well-being simulations."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Luoma Ke", email = "keluoma@gmail.com" }
]
keywords = [
  "llm",
  "well-being",
  "psychological-ai-validity",
  "simulation",
  "fidelity",
  "psychometrics"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/earthwalking/AI-Wellbeing"
Repository = "https://github.com/earthwalking/AI-Wellbeing"
Issues = "https://github.com/earthwalking/AI-Wellbeing/issues"

[tool.setuptools.packages.find]
where = ["src"]
